# kimai_mcp

./: .env.example  .env.server.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONSOLIDATED_TOOLS_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  RELEASING.md  TOOL_CONSOLIDATION_PLAN.md  api_documentation.json  comprehensive_test.py  debug_simple.py  debug_test.py  docker-compose.yml  pyproject.toml  simple_test.py  test_absence.py  test_consolidated_tools.py  test_timesheet_timer.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
config/: users.example.json
examples/: claude_desktop_config.json  remote_server_config.json  usage_examples.md
src/kimai_mcp/: __init__.py  client.py  models.py  oauth.py  oidc.py  security.py  server.py  sse_server.py  streamable_http_server.py  user_config.py
src/kimai_mcp/tools/: absence.py  absence_manager.py  activity.py  calendar.py  calendar_meta.py  comment_tool.py  config_info.py  customer.py  entity_manager.py  errors.py  holiday.py  invoice.py  project.py  project_analysis.py  rate_manager.py  registry.py  tag.py  team.py  team_access_manager.py  timesheet.py  timesheet_analytics.py  timesheet_consolidated.py  user.py  user_discovery.py
tests/: __init__.py  conftest.py  test_absence_fix.py  test_call_tool_errors.py  test_entity_serialization.py  test_integration.py  test_oauth.py  test_oidc.py  test_output_format.py  test_security.py  test_timesheet_list.py  test_tool_dispatch.py  test_tools_comprehensive.py
