[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimai-mcp"
description = "MCP server for Kimai time-tracking API integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kimai MCP Contributors"},
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
kimai-mcp = "kimai_mcp.server:entrypoint"

[tool.hatch.build]
packages = ["src/kimai_mcp"]
